# musibot

./: .gitignore  CLAUDE.md  README.md  musibot.code-workspace
components/api/: README.md  pyproject.toml
components/api/musibot/api/: __init__.py  __main__.py  app.py  auth.py  config.py  domain.py  executions.py  messaging.py  schemas.py  storage.py
components/api/musibot/api/routes/: executions.py  files.py  pages.py
components/api/tests/: conftest.py  fakes.py  test_config.py  test_domain.py  test_executions_service.py  test_files.py  test_messaging_integration.py  test_pages.py  test_pipeline_executions.py  test_storage_integration.py
components/core/: README.md  pyproject.toml
components/core/musibot/core/: __init__.py  config.py  discovery.py  execution.py  identifiers.py  logging.py  logs.py  page.py
components/core/tests/: test_config.py  test_discovery.py  test_execution.py  test_logging.py  test_logs.py  test_page.py
components/models/: README.md
components/orchestrator/: README.md
components/orchestrator-head/: README.md
components/orchestrators/: README.md
components/python-client/: README.md
components/web-ui/: README.md
components/worker-head/: README.md
deploy/: README.md  docker-compose.yml
docs/: adding-models.md  architecture.md  deployment.md  discovery.md  domain-model.md  http-api.md  rabbitmq-exchanges-and-messages.md  repository-layout.md  rough-edges.md  service-configuration.md  user-request-dataflow.md  using-python-client.md  who-are-the-users.md  worker-ipc.md  writing-pipelines.md
